--- a/client/src/assets/styles/table.css
+++ b/client/src/assets/styles/table.css
@@ -25,8 +25,8 @@
 .guest-poster-table th:nth-child(3),
 .guest-poster-table td:nth-child(3) {
     padding: 15px 8px;
-    min-width: 7%;
-    max-width: 10%;
+    min-width: 6%;
+    max-width: 9%;
 }
 
 .guest-poster-table th:nth-child(4),
@@ -48,18 +48,18 @@
 .guest-poster-table tr th:nth-child(12),
 .guest-poster-table tr td:nth-child(12)
 {
-    min-width: 6%;
-    max-width: 10%;
+    min-width: 5%;
+    max-width: 9%;
 }
 
 .guest-poster-table tr th:nth-child(13),
 .guest-poster-table tr td:nth-child(13) {
-    max-width: 10%;
+    max-width: 11%;
 }
 
 .guest-poster-table tr th:nth-child(14),
 .guest-poster-table tr td:nth-child(14) {
-    max-width: 15%;
+    max-width: 18%;
 }
 
 th.features,
@@ -154,7 +154,7 @@ td .feature img {
 
 td .fee {
     display: block;
-    margin-bottom: 25px;
+    margin-bottom: 8px;
     cursor: pointer;
 }
 
@@ -175,6 +175,9 @@ td .fee .left {
     border-radius: 4px;
     margin-right: 3px;
     transition: 0.5s;
+    width: 70px;
+    margin-top: 0;
+    display: inline-block;
 }
 
 td .fee .right {
