--- a/client/src/assets/styles/table.css
+++ b/client/src/assets/styles/table.css
@@ -168,7 +168,8 @@ td .fee:hover .right {
 }
 
 td .fee .left {
-    padding: 5px 3px;
+    text-align: center;
+    padding: 6px 3px;
     font-size: 14px;
     color: #BDBDBD;
     border: 2px solid #BDBDBD;
