Fix styles and filters

--- a/client/src/assets/styles/table.css
+++ b/client/src/assets/styles/table.css
@@ -29,42 +29,15 @@
     max-width: 9%;
 }
 
-.guest-poster-table th:nth-child(4),
-.guest-poster-table td:nth-child(4),
-.guest-poster-table th:nth-child(5),
-.guest-poster-table td:nth-child(5),
-.guest-poster-table th:nth-child(6),
-.guest-poster-table td:nth-child(6),
-.guest-poster-table th:nth-child(7),
-.guest-poster-table td:nth-child(7),
-.guest-poster-table th:nth-child(8),
-.guest-poster-table td:nth-child(8),
-.guest-poster-table th:nth-child(9),
-.guest-poster-table td:nth-child(9),
-.guest-poster-table th:nth-child(10),
-.guest-poster-table td:nth-child(10),
-.guest-poster-table tr th:nth-child(11),
-.guest-poster-table tr td:nth-child(11),
-.guest-poster-table tr th:nth-child(12),
-.guest-poster-table tr td:nth-child(12)
-{
-    min-width: 5%;
-    max-width: 9%;
-}
-
-.guest-poster-table tr th:nth-child(13),
-.guest-poster-table tr td:nth-child(13) {
-    max-width: 11%;
-}
-
-.guest-poster-table tr th:nth-child(14),
-.guest-poster-table tr td:nth-child(14) {
-    max-width: 18%;
-}
-
 th.features,
 td.features {
+    margin-left: 10px;
     width: 10%;
+}
+th.value-column,
+td.value-column {
+    width: 5%;
+    text-align: right;
 }
 
 th.editorial-fee,
@@ -86,12 +59,9 @@ td.editorial-fee {
 }
 
 th, td {
-    text-align: center;
+    text-align: left;
 }
 
-th.trust {
-    text-align: center;
-}
 
 th.website,
 td.website,
@@ -113,9 +83,9 @@ td.editorial-fee {
 
 td div.link .website-link{
     display: inline-block;
-    max-width: 100%;
-    font-size: 14px;
-    font-weight: bold;
+    max-width: 70%;
+    /*font-size: 14px;*/
+    /*font-weight: bold;*/
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
