--- a/client/src/assets/styles/table.css
+++ b/client/src/assets/styles/table.css
@@ -19,30 +19,35 @@
 
 .guest-poster-table th:nth-child(2),
 .guest-poster-table td:nth-child(2) {
-    width: 15%;
+    width: 16%;
 }
 
 .guest-poster-table th:nth-child(3),
 .guest-poster-table td:nth-child(3) {
-    padding: 15px 8px;
-    min-width: 6%;
-    max-width: 9%;
+    width: 5%;
+    text-align: left;
+}
+
+tbody td {
+    padding-top: 20px !important;
+    padding-bottom: 20px !important;
 }
 
 th.features,
 td.features {
     margin-left: 10px;
-    width: 10%;
+    width: 11%;
 }
 th.value-column,
 td.value-column {
-    width: 5%;
-    text-align: right;
+    min-width: 5%;
+    max-width: 8%;
+    text-align: center;
 }
 
 th.editorial-fee,
 td.editorial-fee {
-    width: 14%;
+    width: 13%;
 }
 
 .guest-poster-table th,
@@ -61,7 +66,6 @@ td.editorial-fee {
 th, td {
     text-align: left;
 }
-
 
 th.website,
 td.website,
@@ -139,12 +143,12 @@ td .fee:hover .right {
 
 td .fee .left {
     text-align: center;
-    padding: 6px 3px;
+    padding: 8px 3px;
     font-size: 14px;
     color: #BDBDBD;
     border: 2px solid #BDBDBD;
     border-radius: 4px;
-    margin-right: 3px;
+    margin-right: 4px;
     transition: 0.5s;
     width: 70px;
     margin-top: 0;
@@ -166,11 +170,15 @@ td .fee-active .right{
     color: #333333;
 }
 
-tbody tr {
+tbody tr, thead tr {
     border-bottom: 1px solid #eeedee;
 }
 
 .underline {
     text-decoration: underline;
+}
+
+tbody > tr:hover {
+    background: #efefef;
 }
 
